# dual-steering

./: 01_llm_data.ipynb  02_llm_embeddings.py  03_llm_steering.py  04_llm_metric.py  05_clip_object.py  06_clip_coco.py  07_visualization.ipynb  LICENSE  README.md  pyproject.toml
data/: mapping_verb_en_fr.json  mapping_verb_ing.json  mapping_verb_past.json  mapping_verb_third.json
information_geometry/: __init__.py
information_geometry/core/: __init__.py  clip.py  embeddings.py  geometry.py  metric.py  model.py
information_geometry/directions/: __init__.py  linear.py
information_geometry/steering/: __init__.py  method.py
